tests/suites/application_storage_k8s/specs/deny-postgresql-sts.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: deny-postgresql-sts
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["statefulsets"]
  validations:
    - expression: "object.metadata.name != 'postgresql-k8s'"
      message: "Creation of StatefulSet named 'postgresql-k8s' is not allowed."
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: deny-postgresql-sts-binding
spec:
  policyName: deny-postgresql-sts
  validationActions: [Deny]
  # Only apply to the namespaces (juju models) below to avoid disrupting
  # other tests.
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - scale-app-with-updated-storage-self-healing
            - scale-after-storage-update-missing-sts-recovery
